--- a/assets/index.html
+++ b/assets/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List</title>
+    <title>To Do List Using Jquery</title>
     <script defer="" src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script type="text/javascript" src="js/lib/jquery-2.1.4.js"></script>
     <link rel="stylesheet" href="css/todo.css">
